# swagger.json
@@ -410,6 +410,16 @@
             }
           }
         ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdatePropertyDto"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": ""
@@ -786,6 +796,10 @@
           "description",
           "location"
         ]
+      },
+      "UpdatePropertyDto": {
+        "type": "object",
+        "properties": {}
       }
     }
   }
